force-app/main/default/objects/Check__c/Check__c.object-meta.xml
<CustomObject>
    <description>Check object for capturing relevant check data</description>
    <label>Check</label>
    <nameField>
        <displayFormat>CK-{000000}</displayFormat>
        <label>Check ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>