force-app/main/default/objects/Check__c/fields/Accounting_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Reimbursement</label>
    <type>Checkbox</type>
</CustomField>