force-app/main/default/objects/Check__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Internal employee</description>
    <label>Approved By</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Checks</relationshipLabel>
    <relationshipName>Checks</relationshipName>
    <type>Lookup</type>
</CustomField>