force-app/main/default/objects/Check__c/fields/Approved_Check__c.field-meta.xml
<CustomField>
    <fullName>Approved_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is part of the approval VWF on every check.</description>
    <label>Approved Check</label>
    <type>Checkbox</type>
</CustomField>