force-app/main/default/objects/Check__c/fields/Buyback_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Type__c</fullName>
    <label>Buyback Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Stop Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>