force-app/main/default/objects/Check__c/fields/Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Care_Of__c</fullName>
    <description>To add a memo line to the checks issued</description>
    <label>C/O</label>
    <length>80</length>
    <type>Text</type>
</CustomField>