force-app/main/default/objects/Check__c/fields/Change_to_Garnishment__c.field-meta.xml
<CustomField>
    <fullName>Change_to_Garnishment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change to Garnishment</label>
    <type>Checkbox</type>
</CustomField>