force-app/main/default/objects/Check__c/fields/Check_Batch__c.field-meta.xml
<CustomField>
    <fullName>Check_Batch__c</fullName>
    <label>Check Batch</label>
    <referenceTo>Check_Batch__c</referenceTo>
    <relationshipLabel>Checks</relationshipLabel>
    <relationshipName>Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>