force-app/main/default/objects/Check__c/fields/Check_Counter_Valid__c.field-meta.xml
<CustomField>
    <fullName>Check_Counter_Valid__c</fullName>
    <formula>CASE( TEXT(Status__c), 
&quot;Voided&quot;, 0, 
&quot;Canceled&quot;, 0, 
&quot;Stopped&quot;, 0, 
1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Counter_Valid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>