force-app/main/default/objects/Check__c/fields/Check_Signer__c.field-meta.xml
<CustomField>
    <fullName>Check_Signer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field to Internal Employee</description>
    <label>Check Signer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DIR_Employee__c.Authorized_Signer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Checks (Check Signer)</relationshipLabel>
    <relationshipName>Checks1</relationshipName>
    <type>Lookup</type>
</CustomField>