force-app/main/default/objects/Check__c/fields/Fund_Acct__c.field-meta.xml
<CustomField>
    <fullName>Fund_Acct__c</fullName>
    <description>used in UWF document</description>
    <label>Fund/Acct #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>