force-app/main/default/objects/Check__c/fields/Heir__c.field-meta.xml
<CustomField>
    <fullName>Heir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heir</label>
    <type>Checkbox</type>
</CustomField>