force-app/main/default/objects/Check__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <label>Imported From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>