force-app/main/default/objects/Check__c/fields/Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Submitter__c</fullName>
    <description>This is the email address of the submitter for a void request.</description>
    <label>Initial Submitter</label>
    <type>Email</type>
</CustomField>