force-app/main/default/objects/Check__c/fields/JEU_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>JEU_Approval_Status__c</fullName>
    <description>Used to track Approval for JEU payment distributions. Used with Approval Process</description>
    <label>JEU Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>