force-app/main/default/objects/Check__c/fields/Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Mailed_Date__c</fullName>
    <label>Mailed Date</label>
    <type>Date</type>
</CustomField>