force-app/main/default/objects/Check__c/fields/Mo_Yr__c.field-meta.xml
<CustomField>
    <fullName>Mo_Yr__c</fullName>
    <description>used in UWF document</description>
    <label>Mo/Yr</label>
    <length>12</length>
    <type>Text</type>
</CustomField>