force-app/main/default/objects/Check__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <formula>CASE( TEXT(Status__c),  
      &quot;Voided&quot;, 0, 
      &quot;Canceled&quot;, 0,
      &quot;Stopped&quot;, 0,
Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>