force-app/main/default/objects/Check__c/fields/Not_Approved_Check__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is part of the approval VWF process.</description>
    <label>Not Approved Check</label>
    <type>Checkbox</type>
</CustomField>