force-app/main/default/objects/Check__c/fields/Office_Account__c.field-meta.xml
<CustomField>
    <fullName>Office_Account__c</fullName>
    <description>Lookup to the Office Account object</description>
    <label>Office Account</label>
    <referenceTo>Office_Account__c</referenceTo>
    <relationshipLabel>Checks</relationshipLabel>
    <relationshipName>Checks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>