force-app/main/default/objects/Check__c/fields/Office_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Account_Name__c</fullName>
    <formula>Office_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Account Name</label>
    <type>Text</type>
</CustomField>