force-app/main/default/objects/Check__c/fields/Oracle_Warrant_Date__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Warrant_Date__c</fullName>
    <description>Original warrant date from the legacy Oracle cashiering database.</description>
    <inlineHelpText>Original warrant date from the legacy Oracle cashiering database.</inlineHelpText>
    <label>Oracle Warrant Date</label>
    <type>Date</type>
</CustomField>