force-app/main/default/objects/Check__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Payee to whom the check is written</inlineHelpText>
    <label>Payee</label>
    <referenceTo>Payee__c</referenceTo>
    <relationshipLabel>Checks</relationshipLabel>
    <relationshipName>Checks</relationshipName>
    <type>Lookup</type>
</CustomField>