force-app/main/default/objects/Check__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <formula>Payee__r.Case_Role__r.Case_Role_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Name</label>
    <type>Text</type>
</CustomField>