force-app/main/default/objects/Check__c/fields/Payment_Full_or_Partial__c.field-meta.xml
<CustomField>
    <fullName>Payment_Full_or_Partial__c</fullName>
    <label>Payment: Full or Partial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>