force-app/main/default/objects/Check__c/fields/PRA__c.field-meta.xml
<CustomField>
    <fullName>PRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRA</label>
    <type>Checkbox</type>
</CustomField>