force-app/main/default/objects/Check__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <formula>Check_Batch__r.Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>