force-app/main/default/objects/Check__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <description>For user to provide additional comments on the status of the check, maximum character limit is 140</description>
    <label>Status Comment</label>
    <length>140</length>
    <type>Text</type>
</CustomField>