force-app/main/default/objects/Check__c/fields/Subject_to_Lien_Garnishment__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Lien_Garnishment__c</fullName>
    <description>Pulls the value of the subject to lien or subject to garnishment fields forward from the account for exposure within the check approval flow</description>
    <formula>IF ( Payee__r.Case_Role__r.Entity__r.Subject_to_Garnishment__c || Payee__r.Case_Role__r.Entity__r.Subject_to_Lien__c, TRUE, FALSE )</formula>
    <inlineHelpText>Indicates if the payee is subject to a lien or garnishment</inlineHelpText>
    <label>Subject to Lien/Garnishment</label>
    <type>Checkbox</type>
</CustomField>