force-app/main/default/objects/Check__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <description>Required to describe the reason for the Void for the Approving cashier.</description>
    <label>Void Reason</label>
    <type>TextArea</type>
</CustomField>