force-app/main/default/objects/Check__c/fields/Void_Request__c.field-meta.xml
<CustomField>
    <fullName>Void_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request that a check be voided by a cashier.</description>
    <label>Void Request</label>
    <type>Checkbox</type>
</CustomField>