force-app/main/default/objects/Check__c/recordTypes/Check.recordType-meta.xml
<RecordType>
    <fullName>Check</fullName>
    <active>true</active>
    <description>Normal page layout for check record type</description>
    <label>Check</label>
</RecordType>