force-app/main/default/objects/Check__c/recordTypes/Check_Approved.recordType-meta.xml
<RecordType>
    <fullName>Check_Approved</fullName>
    <active>true</active>
    <description>Record type to lock fields on layout when check is approved</description>
    <label>Check Approved</label>
</RecordType>