force-app/main/default/objects/Check__c/validationRules/Cannot_Approve_the_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Approve_the_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c), ISPICKVAL(Status__c, &quot;Approved&quot;), !$Permission.Check_Approver)</errorConditionFormula>
    <errorMessage>Only check batch approver can approve the checks</errorMessage>
</ValidationRule>