force-app/main/default/objects/Check__c/validationRules/Cannot_be_voided_if_status_is_printed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_voided_if_status_is_printed</fullName>
    <active>true</active>
    <description>Validation Rule on Check object where If Status = Printed, then the value cannot be changed to voided.</description>
    <errorConditionFormula>AND 
(ISPICKVAL(PRIORVALUE( Status__c),&quot;printed&quot;), 
ISCHANGED(Status__c), 
NOT( CONTAINS($Profile.Name, &#39;System Administrator&#39;) ), 
!$Permission.DLSE_Sr_Cashier,
!$Permission.Cashiering_Disbursing  
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Once status has been changed to printed the value of this field cannot be changed.</errorMessage>
</ValidationRule>