force-app/main/default/objects/Check__c/validationRules/PrintedValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>PrintedValidationRule</fullName>
    <active>false</active>
    <errorConditionFormula>AND 
(ISPICKVAL(PRIORVALUE( Status__c),&quot;printed&quot;), 
TEXT(Status__c) &lt;&gt; &#39;Void Requested&#39;, 
OR( 
NOT( CONTAINS($Profile.Name, &quot;System Administrator&quot;) ), 
$Permission.DLSE_Sr_Cashier 
) 
)</errorConditionFormula>
    <errorDisplayField>Accounting_Reimbursement__c</errorDisplayField>
    <errorMessage>You are not authorized to change the Status once printed</errorMessage>
</ValidationRule>