force-app/main/default/objects/Check__c/validationRules/Require_Description_on_void_request.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Description_on_void_request</fullName>
    <active>true</active>
    <description>This requires that a cashier give a reason for the request of a printed check to be voided.</description>
    <errorConditionFormula>AND( Void_Request__c = True,  ISBLANK( Void_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Void_Reason__c</errorDisplayField>
    <errorMessage>You must provide a Reason for the Void Request.</errorMessage>
</ValidationRule>