force-app/main/default/objects/Check__c/validationRules/Secondary_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Approver</fullName>
    <active>true</active>
    <description>Req. fields when filling in Secondary Approver</description>
    <errorConditionFormula>AND(  
  ISPICKVAL(PRIORVALUE(Status__c ), &#39;Secondary Approval Needed&#39;),
  TEXT(Status__c ) = &#39;Approved&#39;,
  OR(ISBLANK(Secondary_Approval_Date__c),
  ISBLANK(Secondary_Approver__c))
)</errorConditionFormula>
    <errorMessage>Secondary Approver and Secondary Approval Date is required</errorMessage>
</ValidationRule>