force-app/main/default/objects/Check__c/validationRules/Void_Check_Batch.validationRule-meta.xml
<ValidationRule>
    <fullName>Void_Check_Batch</fullName>
    <active>true</active>
    <description>Do not allow checks to be added to a check batch that has status = Void</description>
    <errorConditionFormula>AND(
  TEXT(Check_Batch__r.Status__c ) = &#39;Void&#39;,
   ISNEW() 
)</errorConditionFormula>
    <errorMessage>The check cannot be added to the check batch because the check batch is VOID</errorMessage>
</ValidationRule>