force-app/main/default/objects/Check__c/validationRules/Void_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Void_Requested</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( CONTAINS($Profile.Name, &#39;System Administrator&#39;) ),
NOT($Permission.DLSE_Sr_Cashier),
ISPICKVAL(PRIORVALUE(Status__c),&#39;Void Requested&#39;), 
ISCHANGED(Status__c) 
)</errorConditionFormula>
    <errorMessage>You are not authorized to change the status away from Void Requested.</errorMessage>
</ValidationRule>