force-app/main/default/objects/Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_Batch__c</columns>
    <columns>Office_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>